--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "dave-liddament/phpstan-php-language-extensions",
   "description": "PHPStan rules to implement the language extensions provided by the php-language-extensions",
+  "keywords": ["static analysis", "phpstan", "package attribute", "friend attribute"],
   "type": "phpstan-extension",
   "require": {
     "php": "^8",
