ADD CallableFrom attribute implementation

--- a/extension.neon
+++ b/extension.neon
@@ -27,6 +27,22 @@ services:
         - phpstan.rules.rule
 
     -
+        class: DaveLiddament\PhpstanPhpLanguageExtensions\Rules\CallableFromMethodCallRule
+        tags:
+        - phpstan.rules.rule
+
+    -
+        class: DaveLiddament\PhpstanPhpLanguageExtensions\Rules\CallableFromNewCallRule
+        tags:
+        - phpstan.rules.rule
+
+    -
+        class: DaveLiddament\PhpstanPhpLanguageExtensions\Rules\CallableFromStaticCallRule
+        tags:
+        - phpstan.rules.rule
+
+
+    -
         class: DaveLiddament\PhpstanPhpLanguageExtensions\Rules\PackageMethodCallRule
         tags:
         - phpstan.rules.rule
