--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   "require-dev": {
     "phpunit/phpunit": "^9.5.28",
     "friendsofphp/php-cs-fixer": "^3.13.2",
-    "php-parallel-lint/php-parallel-lint": "^1.3.2"
+    "php-parallel-lint/php-parallel-lint": "^1.3.2",
+    "dave-liddament/phpstan-rule-test-helper": "^0.1.0"
   },
   "license": "MIT",
   "autoload": {
