--- a/composer.json
+++ b/composer.json
@@ -4,15 +4,15 @@
   "keywords": ["static analysis", "phpstan", "package attribute", "friend attribute"],
   "type": "phpstan-extension",
   "require": {
-    "php": ">=8.0 <8.3",
+    "php": "~8.0.0 || ~8.1.0 || ~8.2.0 || ~8.3.0",
     "phpstan/phpstan": "^1.10.34",
-    "dave-liddament/php-language-extensions": "^0.5.0"
+    "dave-liddament/php-language-extensions": "^0.5.0 || ^0.6.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.6.12",
     "friendsofphp/php-cs-fixer": "^3.26.1",
     "php-parallel-lint/php-parallel-lint": "^1.3.2",
-    "dave-liddament/phpstan-rule-test-helper": "^0.1.0"
+    "dave-liddament/phpstan-rule-test-helper": "^0.1.0 || ^0.2.0"
   },
   "license": "MIT",
   "autoload": {
