ADD rule to find rules that are not in extension.neon

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,5 +3,13 @@ parameters:
     paths:
     - src
     - tests
+    - build
     excludePaths:
     - tests/Rules/data
+
+services:
+
+-
+    class: DaveLiddament\PhpstanPhpLanguageExtensions\Build\PHPStan\Rules\CheckRuleIsInExtension
+    tags:
+    - phpstan.rules.rule
