--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "phpunit/phpunit": "^9.6.12",
     "friendsofphp/php-cs-fixer": "^3.26.1",
     "php-parallel-lint/php-parallel-lint": "^1.3.2",
-    "dave-liddament/phpstan-rule-test-helper": "^0.3.0"
+    "dave-liddament/phpstan-rule-test-helper": "^0.3.0",
+    "nette/neon": "^3.4"
   },
   "license": "MIT",
   "autoload": {
@@ -22,7 +23,8 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "DaveLiddament\\PhpstanPhpLanguageExtensions\\Tests\\": "tests/"
+      "DaveLiddament\\PhpstanPhpLanguageExtensions\\Tests\\": "tests/",
+      "DaveLiddament\\PhpstanPhpLanguageExtensions\\Build\\": "build/"
     },
     "classmap": [
       "tests/Rules/data"
