ADD e2e testing into own directory

--- a/e2e/phpstan-e2e.neon
+++ b/e2e/phpstan-e2e.neon
@@ -1,7 +1,7 @@
 parameters:
     level: max
     paths:
-    - build/e2e/data
+    - data
 
 includes:
-    - extension.neon
+    - ../extension.neon
