allow installing with phpstan/phpstan 2.0

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "type": "phpstan-extension",
   "require": {
     "php": "~8.0.0 || ~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
-    "phpstan/phpstan": "^1.12",
+    "phpstan/phpstan": "^1.12 || ^2.0",
     "dave-liddament/php-language-extensions": "^0.8.0 || ^0.9.0"
   },
   "require-dev": {
