Add script to check dependencies work for both PHPStan v1 and v2

--- a/.github/workflows/full-checks.yml
+++ b/.github/workflows/full-checks.yml
@@ -61,3 +61,8 @@ jobs:
 
       - name: "Full CI"
         run: "composer ci"
+
+      - name: "Check dependencies"
+        run: |
+          cd dependency-tests
+          ./check-phpstan-dependencies.sh
