--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
   "require": {
     "php": "~8.0.0 || ~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0 || ~8.5.0",
     "phpstan/phpstan": "^1.12.15 || ^2.0",
-    "dave-liddament/php-language-extensions": "^0.8.0 || ^0.9.0"
+    "dave-liddament/php-language-extensions": "^0.8.0 || ^0.9.0 || ^0.10.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.6.12",
