--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "phpunit/phpunit": "^9.6.12",
     "friendsofphp/php-cs-fixer": "^3.26.1",
     "php-parallel-lint/php-parallel-lint": "^1.3.2",
-    "dave-liddament/phpstan-rule-test-helper": "^0.5.0",
+    "dave-liddament/phpstan-rule-test-helper": "^0.5.0 || ^0.6.0",
     "nette/neon": "^3.4"
   },
   "license": "MIT",
